--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ header {
     text-align: center;
 }
 body {
-    /* width: 964px; */
+    /* width: 960px; */
     width: 100%;
     height: 100%;
     margin: auto;
@@ -19,12 +19,21 @@ body {
 }
 nav {
     height: 70px;
-    padding: 40px 10px 10px 10px;
+    padding: 40px 64px 10px 10px;
     background-color: white;
     color: teal;
     font-size: 10pt;
     float: right;
 }
+a {
+    color: teal;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+hr {
+    color: teal;
+}
+
 .left {
     padding: 15px 10px 10px 10px;
     float: left;
@@ -37,9 +46,9 @@ nav {
     font-family: Georgia, Times, 'Times New Roman', serif;
 }
 
-.lineSpacing {
+.lineCor {
     line-height: 200%;
-    color: teal;
+    color: #777777;
 }
 #leftPara {
     height: 51px;
@@ -53,7 +62,7 @@ nav {
 }
 #sidebarA {
     /* width:  180px; */
-    width: 25%;
+    width: 18%;
     height: 500px;  /* to give the sidebar some height for its border */
     /* border-right:  2px solid #ef9c00; */
     border-collapse: collapse;
@@ -62,11 +71,13 @@ nav {
     float: left;
 }
 .main {
-    /* width: 600px; */
-    width: 50%;
+    width: 960px;
+    /* width: 50%; */
     /* height: 376px; */
+    padding: 15px 25px;
     background-color: white;
     border-collapse: collapse;
+    color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     float: left;
@@ -76,7 +87,7 @@ nav {
 }
 #sidebarB {
     /* width: 180px; */
-    width: 25%;
+    width: 18%;
     height: 500px;  /* to give the sidebar some height for its border */
     float :right;
     /* float: left; */
@@ -102,15 +113,15 @@ nav {
 #bio-image {
     width: 150px;
     height: 150px;
-    margin-right: 5px;
+    margin-right: 15px;
     float: left;
 } 
 .port-image {
-    /* width: 200px; */
+    width: 350px;
     height: 150px;
     margin-right: 5px;
     float: left;
-}     
+}  
 #spacerA {
     height: 50px;
     background-color: transparent;
@@ -193,6 +204,11 @@ section:after {
     width: 200px;;
     padding: 5px;
   }
+  .column-smsp {
+    float: left;
+    width: 100px;;
+    padding: 5px;
+  }
   /* Clearfix (clear floats) */
 .row::after {
     content: "";
@@ -204,7 +220,7 @@ section:after {
     top: 262px;
     background: teal;
     color: white;
-    width: 190px;
+    width: 238px;
     /* transition: .5s ease; */
     opacity:1;
     color: white;
@@ -216,9 +232,9 @@ section:after {
   #overlay2 {
     position: absolute;
     top: 262px;
-    left: 490px;
+    left: 618px;
     background: teal;
-    width: 190px;
+    width: 238px;
     /* transition: .5s ease; */
     opacity:1;
     color: white;
@@ -231,7 +247,7 @@ section:after {
     position: absolute;
     top: 422px;
     background: teal;
-    width: 190px;
+    width: 238px;
     /* transition: .5s ease; */
     opacity:1;
     color: white;
@@ -243,9 +259,9 @@ section:after {
   #overlay4 {
     position: absolute;
     top: 422px;
-    left: 490px;
+    left: 618px;
     background: teal;
-    width: 190px;
+    width: 238px;
     /* transition: .5s ease; */
     opacity:1;
     color: white;
@@ -258,7 +274,7 @@ section:after {
     position: absolute;
     top: 582px;
     background: teal;
-    width: 190px;
+    width: 238px;
     /* transition: .5s ease; */
     opacity:1;
     color: white;
