--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,29 @@
+/* ----------------
+format elements
+-----------------*/
+
+/* include padding and border in height/width of all elements */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-image: url("gravel.png");
+}
+
 header {
     width: 100%;
     height: 75px;
-    /* padding: 5px 10px 5px 10px;
-    border: 10px;
-    border-color: transparent; */
     margin: auto;
     border-bottom: 5px solid #cccccc;
     background-color: white;
     font-family: Georgia, Times, 'Times New Roman', serif;
     text-align: center;
 }
-body {
-    /* width: 960px; */
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    background-image: url("gravel.png");
-}
+
 nav {
     height: 70px;
     padding: 40px 64px 10px 10px;
@@ -25,51 +32,30 @@ nav {
     font-size: 10pt;
     float: right;
 }
+
 a {
     color: teal;
     font-family: Arial, Helvetica, sans-serif;
+    /* remove underline from link */
     text-decoration: none;
 }
+
 hr {
     color: teal;
 }
 
-.left {
-    padding: 15px 10px 10px 10px;
-    float: left;
-    vertical-align: text-top;
-}
-.label {
-    color: teal;
-    font-size: 14pt;
-    font-weight: bold;
-    font-family: Georgia, Times, 'Times New Roman', serif;
+/* clear floats after the sections */
+section:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.lineCor {
-    line-height: 200%;
-    color: #777777;
-}
-#leftPara {
-    height: 51px;
-    padding: 15px 10px 10px 10px;
-    background-color:teal;
-    color: white;
-    font-size: 14pt;
-    font-weight: bold;
-    /* vertical-align: text-top; */
-    float: left;
-}
-#sidebarA {
-    /* width:  180px; */
-    width: 18%;
-    height: 500px;  /* to give the sidebar some height for its border */
-    /* border-right:  2px solid #ef9c00; */
-    border-collapse: collapse;
-    background-color: transparent;
-    text-align: center;
-    float: left;
-}
+/* ----------------
+format classes
+-----------------*/
+
+/* main and left format section label and content area */
 .main {
     width: 960px;
     /* width: 50%; */
@@ -82,20 +68,90 @@ hr {
     text-align: left;
     float: left;
 }
-.main-ht1 {
-    height: 376px;
+
+.left {
+    padding: 15px 10px 10px 10px;
+    float: left;
+    vertical-align: text-top;
 }
-#sidebarB {
-    /* width: 180px; */
+
+/* formats section label for content area*/
+.label {
+    color: teal;
+    font-size: 14pt;
+    font-weight: bold;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+}
+
+/* adjust paragraph line spacing */
+.lineCor {
+    line-height: 200%;
+    color: #777777;
+}
+
+.port-image {
+    width: 350px;
+    height: 150px;
+    margin-right: 5px;
+    float: left;
+} 
+
+/*---------------------
+project picture overlay
+-------------------- */
+.column {
+    float: left;
+    width: 200px;;
+    padding: 5px;
+}
+
+  .column-smsp {
+    float: left;
+    width: 100px;;
+    padding: 5px;
+}
+
+/* clearfix (clear floats for portfolio images) */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/* ----------------
+format ids
+-----------------*/
+/* style for content label */
+#leftPara {
+    height: 51px;
+    padding: 15px 10px 10px 10px;
+    background-color:teal;
+    color: white;
+    font-size: 14pt;
+    font-weight: bold;
+    float: left;
+}
+
+/* styling for asides */
+#sidebarA {
     width: 18%;
-    height: 500px;  /* to give the sidebar some height for its border */
+    height: 500px;
+    border-collapse: collapse;
+    background-color: transparent;
+    text-align: center;
+    float: left;
+}
+
+#sidebarB {
+    width: 18%;
+    height: 500px;
     float :right;
-    /* float: left; */
     background-color: transparent;
     border-collapse: collapse;
-    /* border-left: 2px solid #ef9c00; */
     text-align: center;
 }
+
+/* style footer */
 #footer {
     position: absolute;
     left: 0;
@@ -110,175 +166,90 @@ hr {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
+
+/* style for photo on About Me*/
 #bio-image {
     width: 150px;
     height: 150px;
     margin-right: 15px;
     float: left;
 } 
-.port-image {
-    width: 350px;
-    height: 150px;
-    margin-right: 5px;
-    float: left;
-}  
+
+/* set height for spacers between header and content on each page */
 #spacerA {
     height: 50px;
     background-color: transparent;
 }
+
 #spacerC {
     height: 50px;
     background-color: transparent;
 }
+
 #spacerP {
     height: 10px;
     background-color: transparent;
 }
+
+/* styling to add borders across the aside */
 #upperA {
     height: 75px;
     border-bottom: 5px solid #cccccc;
     background-color: white;
 }
+
 #upperB {
     height: 75px;
     border-bottom: 5px solid #cccccc;
     background-color: white;
 } 
-#bottomSpacer {
-    position: absolute;
-    bottom: 0;
-    height: 50px;
-    background-color: #ef9c00;
-}   
+
+/* style for submission form */
 #submit-con {
     width: 100px;
     height: 30px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     background-color: teal;
-}   
-.clearfix::after {
-    content: " ";
-    display: block;
-    clear: both;
-}
-/* #underline::after {
-    content: "____________";
-} 
-/* add sticky footer styling */
-html {
-height: 100%;
-}
+}  
 
+/* settings common to all overlays */
 body {
-    /* display: flex; */
-    flex-direction: column;
-    height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
-}
+    /* Avoid the IE 10-11 `min-height` bug. */
+    height: 100vh;
+} 
 
-.content {
-    flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
-    padding: 20px;
-}
-
-/* .footer {
-    flex-shrink: 0; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
-    /*padding: 20px;
-    width: 100%;
-} */
-
-* {
-    box-sizing: border-box;
-}
-
-/* clearing floats per w3school */
-/* Clear floats after the columns */
-section:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-/* add picture overlay */
-.column {
-    float: left;
-    width: 200px;;
-    padding: 5px;
-  }
-  .column-smsp {
-    float: left;
-    width: 100px;;
-    padding: 5px;
-  }
-  /* Clearfix (clear floats) */
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  #overlay1 {
+  .overlay {
     position: absolute;
+    background: teal;
+    color: white;
+    width: 238px;
+    opacity:1;
+    font-size: 15px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  /* specific image overlays */
+  .overlay1 {
     top: 262px;
-    background: teal;
-    color: white;
-    width: 238px;
-    /* transition: .5s ease; */
-    opacity:1;
-    color: white;
-    font-size: 15px;
-    padding: 20px;
-    text-align: center;
   }
   
-  #overlay2 {
-    position: absolute;
+  .overlay2 {
     top: 262px;
-    left: 618px;
-    background: teal;
-    width: 238px;
-    /* transition: .5s ease; */
-    opacity:1;
-    color: white;
-    font-size: 15px;
-    padding: 20px;
-    text-align: center;
+    left: 603px;
   }
   
-  #overlay3 {
-    position: absolute;
+  .overlay3 {
     top: 422px;
-    background: teal;
     width: 238px;
-    /* transition: .5s ease; */
-    opacity:1;
-    color: white;
-    font-size: 15px;
-    padding: 20px;
-    text-align: center;
   }
   
-  #overlay4 {
-    position: absolute;
+  .overlay4 {
     top: 422px;
-    left: 618px;
-    background: teal;
-    width: 238px;
-    /* transition: .5s ease; */
-    opacity:1;
-    color: white;
-    font-size: 15px;
-    padding: 20px;
-    text-align: center;
+    left: 603px;
   }
   
-  #overlay5 {
-    position: absolute;
+  .overlay5 {
     top: 582px;
-    background: teal;
-    width: 238px;
-    /* transition: .5s ease; */
-    opacity:1;
-    color: white;
-    font-size: 15px;
-    padding: 20px;
-    text-align: center;
   }
