--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,15 @@ header {
 }
 
 nav {
+    position: absolute;
+    left: 1061px;
     height: 70px;
+    width: 250px;
     padding: 40px 64px 10px 10px;
     background-color: white;
     color: teal;
     font-size: 10pt;
-    float: right;
+    /* float: right; */
 }
 
 a {
@@ -56,6 +59,9 @@ format classes
 
 /* main and left format section label and content area */
 .main {
+    position: absolute;
+    top: 100px;
+    left: 288px;
     width: 960px;
     /* width: 50%; makes page more responsive */
     padding: 15px 25px;
@@ -69,6 +75,9 @@ format classes
 
 /* add height for portfolio main due absolute positioning of images */
 .main1 {
+    position: absolute;
+    top: 100px;
+    left: 288px;
     width: 960px;
     /* width: 50%; makes page more responsive */
     height: 575px;
@@ -113,27 +122,27 @@ format classes
 
 /* set image locations */
 .port-image1 {
-    top: 175px;
-    left: 300px;
+    top: 85px;
+    left: 50px;
 } 
 .port-image2 {
-    top: 175px;
-   left: 603px;
+    top: 85px;
+   left: 368px;
 } 
 
 .port-image3 {
-   top: 335px;
-   left: 300px;
+   top: 245px;
+   left: 50px;
 } 
 
 .port-image4 {
-   top: 335px;
-   left: 603px;
+   top: 245px;
+   left: 368px;
 } 
 
 .port-image5 {
-   top: 495px;
-   left: 300px;
+   top: 405px;
+   left: 50px;
 } 
 
 /*-------------------------------
@@ -163,6 +172,9 @@ format ids
 -----------------*/
 /* style for content label */
 #leftPara {
+    position: absolute;
+    top: 19px;
+    left: 288px;
     height: 51px;
     padding: 15px 10px 10px 10px;
     background-color:teal;
@@ -206,6 +218,7 @@ format ids
     font-size: 8pt;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    z-index: 4;
 }
 
 /* style for photo on About Me*/
@@ -257,7 +270,7 @@ format ids
 #low-right {
     position: fixed;
     right: 0;
-    bottom: 40px;
+    bottom: 55px;
 }
 
 /* settings common to all overlays */
@@ -275,29 +288,30 @@ body {
   font-size: 15px;
   padding: 20px;
   text-align: center;
+  z-index: 2;
 }
 /* specific image overlays */
 .overlay1 {
-    top: 262px;
-    left: 300px;
+    top: 170px;
+    left: 50px;
   }
   
   .overlay2 {
-    top: 262px;
-    left: 603px;
+    top: 170px;
+    left: 368px;
   }
   
   .overlay3 {
-    top: 422px;
-    left: 300px;
+    top: 330px;
+    left: 50px;
   }
   
   .overlay4 {
-    top: 422px;
-    left: 603px;
+    top: 330px;
+    left: 368px;
   }
   
   .overlay5 {
-    top: 582px;
-    left: 300px;
+    top: 491px;
+    left: 50px;
   }
